# agentic-rag-study

./: .gitignore  README.md  main.py  pyproject.toml
app/api/: client.py  clients.py  lifespan.py  main.py  vector.py  vector_router.py
app/api/dependencies/: auth.py  auth_dependency.py  zilliz_dependency.py
app/api/handlers/: exception_handler.py
app/api/routers/: __init__.py  clients.py  collections.py  vectors.py
app/config/: __init__.py  config.py  init_sqlite.py
app/crud/: __init__.py  clients.py  vectors.py
app/db/: milvus_connect.py  sqlite_base.py  sqlite_session.py
app/models/: client_keys.py  milvus_keys.py
app/schemas/: clients.py  collections.py  response.py
app/services/: security.py
