[project]
name = "agentic-rag-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.4",
    "fastapi[standard]>=0.115.12",
    "openai==1.93.0",
    "pydantic-settings>=2.9.1",
    "pymilvus==2.5.3",
    "sqlalchemy>=2.0.41",
]
